Client view now has explore page with filters
