# src/BeautifyBaltics.Core.API/Application/Master/Queries/FindMasters/FindMastersRequest.cs
@@ -8,4 +8,6 @@ public record FindMastersRequest : PagedRequest
     public string? Text { get; init; }
     public string? City { get; init; }
     public Guid? JobCategoryId { get; init; }
+    public decimal? MinPrice { get; init; }
+    public decimal? MaxPrice { get; init; }
 }
