# src/BeautifyBaltics.Persistence/Repositories/Master/DTOs/MasterSearchDTO.cs
@@ -8,4 +8,6 @@ public record MasterSearchDTO : BaseSearchDTO
     public string? Text { get; set; }
     public string? City { get; set; }
     public Guid? JobCategoryId { get; set; }
+    public decimal? MinPrice { get; set; }
+    public decimal? MaxPrice { get; set; }
 }
